# serenity-builder

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
.zed/: settings.json
src/: embed.rs  lib.rs  model.rs
src/model/: embed.rs
